maybe this will work?

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
     <h1>In Class Demo!</h1>
     <p>This is a test to create a file in Git!</p>
+    <h2> <b>I think i was able to make a fork/clone </b></h2>
 </body>
 </html>
